...
                    config.tags = ["presentation": "swiftui-convenience-api"]
                }
            }
            .buttonStyle(.borderedProminent)

#if !SDK_V10
            Button(isFeedbackWidgetVisible ? "Hide Widget (Deprecated)" : "Show Widget (Deprecated)") {
                if isFeedbackWidgetVisible {
                    SentrySDK.feedback.hideWidget()
                } else {
                    SentrySDK.feedback.showWidget()
                }
                isFeedbackWidgetVisible.toggle()
...
