...
        self.target = target
        self.selector = selector
        super.init(frame: .zero)
        translatesAutoresizingMaskIntoConstraints = false
        isAccessibilityElement = true
        accessibilityLabel = config.widgetConfig.widgetAccessibilityLabel ?? config.widgetConfig.labelText
        accessibilityIdentifier = "io.sentry.feedback.widget"
        
        let atLeastOneElement = config.widgetConfig.showIcon || config.widgetConfig.labelText != nil
        let preconditionMessage = "User Feedback widget attempted to be displayed with neither text label or icon."
#if DEBUG
        precondition(atLeastOneElement, preconditionMessage)
#endif // DEBUG
...
