...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5IM-MG-9GW">
                                        <rect key="frame" x="0.0" y="140" width="259" height="28"/>
                                        <accessibility key="accessibilityConfiguration" identifier="showNibButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Nib Controller"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RjO-LN-eHj">
                                        <rect key="frame" x="0.0" y="168" width="259" height="28"/>
                                        <accessibility key="accessibilityConfiguration" identifier="showTableViewButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Table Controller"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ok0-hq-2kK">
                                        <rect key="frame" x="0.0" y="196" width="259" height="28"/>
                                        <accessibility key="accessibilityConfiguration" identifier="showSplitViewButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Split Controller"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jwi-v3-e8T">
                                        <rect key="frame" x="0.0" y="224" width="259" height="28"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loremIpsumButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Lorem Ipsum Controller"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8CV-WC-ffq">
                                        <rect key="frame" x="0.0" y="279.99999999999994" width="259" height="28"/>
                                        <accessibility key="accessibilityConfiguration" identifier="testNavigationTransactionButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Load Image Controller"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mjD-vZ-Wtp" userLabel="UIClick Transaction">
                                        <rect key="frame" x="0.0" y="307.99999999999994" width="259" height="28"/>
                                        <accessibility key="accessibilityConfiguration" identifier="uiClickTransactionButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="UIClick Transaction"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Transactions" image="clock.fill" catalog="system" selectedImage="clock.fill" id="ypv-KA-BBe"/>
                    <navigationItem key="navigationItem" title="Sentry Test App (Swift)" id="Ddh-Ww-vzM"/>
                    <connections>
...
                                                        <textInputTraits key="textInputTraits"/>
                                                        <connections>
                                                            <action selector="sampleRateEdited:" destination="NZr-bH-g9o" eventType="editingDidEnd" id="M9R-4P-Hu3"/>
                                                        </connections>
                                                    </textField>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Root ViewController" id="NSk-XK-KWR">
                        <barButtonItem key="leftBarButtonItem" title="Close" id="GY1-9d-Bxh">
                            <connections>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="28"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                        <state key="normal" title="Capture Error"/>
                                                        <connections>
                                                            <action selector="captureError:" destination="QmU-DD-itF" eventType="touchUpInside" id="Oe8-KX-Pgr"/>
...
                                                        <rect key="frame" x="0.0" y="84" width="196.66666666666666" height="28"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                        <state key="normal" title="Capture NSException"/>
                                                        <connections>
                                                            <action selector="captureNSException:" destination="QmU-DD-itF" eventType="touchUpInside" id="Gdl-wk-dUU"/>
...
                                                        <rect key="frame" x="0.0" y="133.66666666666669" width="196.33333333333334" height="34.333333333333343"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="Use-after-free"/>
                                                        <connections>
                                                            <action selector="useAfterFree:" destination="QmU-DD-itF" eventType="touchUpInside" id="CBM-tY-0bu"/>
...
                                                                <accessibility key="accessibilityConfiguration" identifier="uiEventTests"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                <state key="normal" title="UI event tests"/>
                                                                <connections>
                                                                    <segue destination="ch4-pK-Zhg" kind="show" id="Q5u-Pd-bbT"/>
...
                                                                <rect key="frame" x="0.0" y="36" width="196.33333333333334" height="28"/>
