...

    private func initialize() {
        backgroundColor = UIColor(white: 0.3, alpha: 1)

        assertLabel = UILabel().forAutoLayout()
        assertLabel.textColor = UIColor(white: 1, alpha: 1)
        assertLabel.accessibilityIdentifier = "ASSERT_MESSAGE"
        addSubview(assertLabel)

        errorLabel = UILabel().forAutoLayout()
        errorLabel.textColor = UIColor(white: 1, alpha: 1)
        errorLabel.accessibilityIdentifier = "ASSERT_ERROR"
        errorLabel.numberOfLines = 0
        addSubview(errorLabel)

        let guide = self.safeAreaLayoutGuide

        let constraints = [
...
