...
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ibQ-eV-JrV">
                    <rect key="frame" x="132" y="431" width="150" height="44"/>
                    <accessibility key="accessibilityConfiguration" label="lonelyButton"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="wa2-1C-M44"/>
                        <constraint firstAttribute="width" constant="150" id="zeE-R7-gWo"/>
                    </constraints>
                    <state key="normal" title="a lonely button">
                        <color key="titleColor" systemColor="systemGreenColor"/>
...
